<resources>
    <string name="app_name">MyKart</string>
    <string name="str_forgot_password">Forgot password</string>
    <string name="str_log_in">Log In</string>
    <string name="str_username">Username</string>
    <string name="str_enter_username">Enter username</string>
    <string name="str_enter_password">Enter password</string>
    <string name="str_pedValidation">\"Password length should be atleast 4 characters \"</string>
    <string name="username_validation">Username should be atleast 4 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strno_orders_found">No orders found</string>
    <string name="str_your_orders">Your Orders</string>
    <string name="txt_register">Register</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="zip_code">zip code</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="registerd">Register</string>
    <string name="your_cart_is_empty_please_add_somethimg_first">Your Cart is empty. please add somethimg first</string>
    <string name="check_out">Checkout</string>
    <string name="items">Items :</string>
    <string name="delivery">Delivery :</string>
    <string name="_20">$20</string>
    <string name="taxes">Taxes :</string>
    <string name="order_total">Order Total :</string>
    <string name="select_address">Select address</string>
    <string name="add_new_address">Add new Address</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="mykart_s_choice">MyKart\'s Choice</string>
    <string name="exclusive_price">Exclusive price</string>
    <string name="product_description">Product Description</string>
    <string name="product_rating">Product Rating</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="order_id">Order ID :</string>
    <string name="order_totall">Order Total :</string>
    <string name="item_name">Item Name :</string>
    <string name="payment_mode">Payment Mode:</string>
    <string name="paid_online">Paid(Online)</string>
    <string name="enter_username">Enter username</string>
    <string name="f">Country</string>
    <string name="add">Add</string>
</resources>