<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="SmallSp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="order"
            type="com.example.mykart.database.Orders" />
    </data>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginVertical="5dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="5dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        android:text="@{order.dateTime}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <RelativeLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_txtId"
            android:text="@string/order_id"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtIdnumber"
            android:text="@{String.valueOf(order.orderId)}"
            android:layout_toEndOf="@id/tv_txtId"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_marginTop="7dp"
            android:gravity="end"
            android:layout_marginHorizontal="25dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/darkpink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txttotal"
            android:text="@string/order_totall"
            android:layout_below="@id/tv_txtId"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_totalprice"
            android:text="@{`$`+String.valueOf(order.itemTotal)}"
            android:layout_toEndOf="@id/txttotal"
            android:layout_below="@id/txtIdnumber"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:layout_marginHorizontal="25dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/darkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtitemname"
            android:text="@string/item_name"
            android:layout_below="@id/txttotal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_itemName"
            android:text="@{order.item}"
            android:layout_toEndOf="@id/txtitemname"
            android:layout_below="@id/tv_totalprice"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:layout_marginHorizontal="25dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/darkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtpaymentMode"
            android:text="@string/payment_mode"
            android:layout_below="@id/tv_itemName"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/tv_paymentMode"
            android:text="@string/paid_online"
            android:layout_toEndOf="@id/txtitemname"
            android:layout_below="@id/tv_itemName"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:layout_marginHorizontal="25dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/darkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>
</layout>