<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:id="@+id/rl_loginlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_"
        tools:context=".activities.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/cardLogin"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/moondance"
            android:text="MyKart"
            android:textColor="@color/darkpink"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/lightGrey2"
            app:cardCornerRadius="5dp"
            app:cardElevation="20dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkpink"
                    android:gravity="center"
                    android:paddingVertical="5dp"

                    android:text="@string/str_log_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <LinearLayout
                    android:id="@+id/ll_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtLogin"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="0.6"
                        android:paddingVertical="5dp"
                        android:paddingStart="20dp"
                        android:text="@string/str_username"
                        android:textAlignment="textStart"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                    <EditText
                        android:id="@+id/edtusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/edittextcustom"
                        android:hint="@string/enter_username"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingVertical="10dp"
                        android:paddingStart="20dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_username"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtpwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="0.6"
                        android:paddingVertical="5dp"
                        android:paddingStart="20dp"
                        android:text="Password"
                        android:textAlignment="textStart"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                    <EditText
                        android:id="@+id/edtpwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/edittextcustom"
                        android:hint="@string/str_enter_password"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingVertical="10dp"
                        android:paddingStart="20dp"
                        android:password="true"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llforgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_pwd"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/txt_forgotpwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/str_forgot_password"
                        android:textColor="@color/darkpink"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                </LinearLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llforgot"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/darkpink"
                    android:text="@string/str_log_in"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/darkpink"
                    android:text="@string/txt_register"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="20dp"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>
</layout>