<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="products"
        type="com.example.mykart.database.ProductList" />
</data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@{products.category}"
                android:textColor="@color/blue"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_category"
                android:layout_marginHorizontal="10dp"
                android:text="@{products.title}"
                android:textColor="@color/darkpink"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginHorizontal="10dp"
                android:background="@color/darkpink"
                android:paddingHorizontal="10dp"
                android:text="@string/mykart_s_choice"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imgViewPager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/tv_choice"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightGrey" />


            <TextView
                android:id="@+id/tv_limited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgViewPager"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/darkpink"
                android:paddingHorizontal="10dp"
                android:text="@string/exclusive_price"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_limited"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:text="@{`$`+String.valueOf(products.price)}"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_ndescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/darkpink"
                android:paddingHorizontal="10dp"
                android:text="@string/product_description"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ndescription"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:text="@{products.description}"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/darkpink"
                android:paddingHorizontal="10dp"
                android:text="@string/product_rating"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_below="@+id/txtRating"
                android:layout_width="180dp"
                android:layout_marginStart="10dp"
                android:secondaryProgressTint="@color/yellow"
                android:progressTint="@color/yellow"
                android:layout_marginTop="5dp"
                android:layout_height="30dp"
                style="?android:attr/ratingBarStyleIndicator"
                android:scaleX=".55"
                android:rating="@{products.rating.rate}"
                android:scaleY=".6"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:numStars="5"
                android:max="5"/>

            <TextView
                android:id="@+id/tv_ratecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:layout_marginTop="32dp"
                android:layout_marginStart="-20dp"
                android:layout_toEndOf="@id/txtRating"
                android:paddingHorizontal="10dp"
                android:text="@{String.valueOf(products.rating.count)}"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/darkpink"
        android:drawablePadding="20dp"
        android:paddingVertical="10dp"
        android:text="@string/add_to_cart" />
</RelativeLayout>
</layout>
